--- a/bb-frontend/src/app/auth/login/login.component.html
+++ b/bb-frontend/src/app/auth/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="log-in">
-  <h2>Log In</h2>
+  <h2 style="color: #344150; margin-left: 60px">Log In</h2>
   <form [formGroup]="loginForm" (ngSubmit)="onLogin()">
     <div class="form-group">
       <input
@@ -19,7 +19,9 @@
         required
       />
     </div>
+
     <button type="submit">Log In</button>
+
     <div class="error-message" *ngIf="errorMessage">{{ errorMessage }}</div>
   </form>
 </div>
