--- a/bb-frontend/src/app/home-container/home-page/bills/bills.component.html
+++ b/bb-frontend/src/app/home-container/home-page/bills/bills.component.html
@@ -1,5 +1,11 @@
 <div class="bill-button" style="text-align: right">
-  <button (click)="openCreateBillDialog()" mat-button>Add Bill</button>
+  <button
+    style="margin-bottom: 5px"
+    (click)="openCreateBillDialog()"
+    mat-button
+  >
+    Add Bill
+  </button>
 </div>
 <div class="bill-parent">
   <div>
