--- a/bb-frontend/src/app/auth/login/login.component.css
+++ b/bb-frontend/src/app/auth/login/login.component.css
@@ -1,18 +1,14 @@
-/* Style for the login form */
 .log-in {
-  text-align: center;
   font-family: Arial, sans-serif;
 }
 
-/* Style for the form groups (label + input) */
 .form-group {
   display: flex;
-  flex-direction: column; /* Stack label and input vertically */
-  align-items: center; /* Left-align label and input */
-  margin-bottom: 10px; /* Add spacing between form groups */
+  flex-direction: column;
+
+  margin-bottom: 10px;
 }
 
-/* Style for inputs */
 input {
   width: 50%;
   padding: 10px;
@@ -20,7 +16,6 @@ input {
   border-radius: 4px;
 }
 
-/* Style for the "Log In" button */
 button {
   background-color: #3498db;
   color: white;
@@ -28,12 +23,12 @@ button {
   border: none;
   border-radius: 15px;
   cursor: pointer;
-  width: 50%;
+  width: 55%;
   font-family: Arial, sans-serif;
+  /* margin-left: 15px; */
 }
 
-/* Style for the error message */
 .error-message {
   color: red;
-  margin-top: 10px; /* Add spacing between error message and button */
+  margin-top: 10px;
 }
