--- a/bb-frontend/src/app/auth/signup/signup.component.html
+++ b/bb-frontend/src/app/auth/signup/signup.component.html
@@ -1,5 +1,5 @@
 <div class="sign-up">
-  <h2>Sign Up</h2>
+  <h2 style="color: black">Sign Up</h2>
   <form [formGroup]="signUpForm" (ngSubmit)="onSignUp()">
     <div class="form-group">
       <input
@@ -28,7 +28,8 @@
         required
       />
     </div>
-    <button type="submit">Sign Up</button>
-    <div class="error-message" *ngIf="errorMessage">{{ errorMessage }}</div>
+    <button type="submit" (click)="onSignUp()">Sign Up</button>
   </form>
 </div>
+
+<div class="error-message" *ngIf="errorMessage">{{ errorMessage }}</div>
