--- a/bb-frontend/src/app/home-container/home-page/budget/budget.component.css
+++ b/bb-frontend/src/app/home-container/home-page/budget/budget.component.css
@@ -24,8 +24,8 @@
 
 .budget-button {
   align-self: flex-end; /* Align the button to the right */
+  margin-bottom: 5px;
 }
-
 .card-container {
   display: flex;
   flex-direction: column; /* Stack cards vertically */
@@ -36,9 +36,9 @@
 
 .custom-card {
   width: 600px;
-  height: 165px;
+  height: 180px;
   margin: 10px 0; /* Adjust spacing between cards */
-  padding: 15px;
+
   background-color: #fff;
   border: 1px solid #e0e0e0;
   border-radius: 8px;
